--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
     </header>
 
     <main>
-        <div class="container">
-            Prova
-        </div>
+        <section>
+            <div class="container">
+                <div class="add add-task">Add Task</div>
+                <div class="add">Add Section</div>
+            </div>
+            <hr>
+        </section>
     </main>
 </body>
 
