added: first line

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             </div>
             <hr>
         </section>
+
+        <section>
+            <div class="container">
+                <h3>&#11206; New Task</h3>
+                <div class="line">
+                    <div class="check">&#10003;</div>
+                    <span>Quarterly Newsletter</span>
+                    <div class="tag">Editorial</div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
