--- a/index.html
+++ b/index.html
@@ -35,10 +35,68 @@
                 <div class="line">
                     <div class="check">&#10003;</div>
                     <span>Quarterly Newsletter</span>
-                    <div class="tag">Editorial</div>
+                    <div class="tag editorial">Editorial</div>
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="container">
+                <h3>&#11206; Today</h3>
+                <div class="line">
+                    <div class="check">&#10003;</div>
+                    <span>Recruiting blog post</span>
+                    <div class="tag editorial">Editorial</div>
+                </div>
+
+                <div class="line">
+                    <div class="check">&#10003;</div>
+                    <span>Mobile App launch</span>
+                    <div class="tag q1-goals">Q1 Goals</div>
+                </div>
+
+                <div class="line">
+                    <div class="check cross">&cross;</div>
+                    <span>Interview John H.</span>
+                    <div class="tag recruiting">Recruiting</div>
+                </div>
+
+                <div class="line">
+                    <div class="check">&#10003;</div>
+                    <span>Summit update to mobile storefronts</span>
+                    <div class="tag mobile">Mobile</div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <h3>&#11206; Upcoming</h3>
+                <div class="line">
+                    <div class="check cross">&cross;</div>
+                    <span>Schedule meeting with Alex</span>
+                </div>
+
+                <div class="line">
+                    <div class="check">&#10003;</div>
+                    <span>Homepage refresh</span>
+                    <div class="tag website">Website</div>
+                </div>
+
+                <div class="line">
+                    <div class="check">&#10003;</div>
+                    <span>Homeboard new Sales team members</span>
+                    <div class="tag sales">Sales</div>
+                </div>
+
+                <div class="line">
+                    <div class="check">&#10003;</div>
+                    <span>Review editorial calendar</span>
+                    <div class="tag mobile">Mobile</div>
+                </div>
+            </div>
+        </section>
+            
     </main>
 </body>
 
