--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </header>
 
     <main>
-        <section>
+        <div>
             <div class="container">
                 <div class="add add-task">Add Task</div>
                 <div class="add">Add Section</div>
             </div>
             <hr>
-        </section>
+        </div>
 
         <section>
             <div class="container">
