feat: replaced h3 with div

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <section>
             <div class="container">
-                <h3>&#11206; New Task</h3>
+                <div class="title">&#11206; New Task</div>
                 <div class="line">
                     <div class="check">&#10003;</div>
                     <span>Quarterly Newsletter</span>
@@ -42,7 +42,7 @@
 
         <section>
             <div class="container">
-                <h3>&#11206; Today</h3>
+                <div class="title">&#11206; Today</div>
                 <div class="line">
                     <div class="check">&#10003;</div>
                     <span>Recruiting blog post</span>
@@ -71,7 +71,7 @@
 
         <section>
             <div class="container">
-                <h3>&#11206; Upcoming</h3>
+                <div class="title">&#11206; Upcoming</div>
                 <div class="line">
                     <div class="check cross">&cross;</div>
                     <span>Schedule meeting with Alex</span>
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </section>
-            
+
     </main>
 </body>
 
