--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <section>
             <div class="container">
-                <div class="title">&#11206; New Task</div>
+                <h1 class="title">&#11206; New Task</h1>
                 <div class="line">
                     <div class="check">&#10003;</div>
                     <span>Quarterly Newsletter</span>
@@ -42,7 +42,7 @@
 
         <section>
             <div class="container">
-                <div class="title">&#11206; Today</div>
+                <h1 class="title">&#11206; Today</h1>
                 <div class="line">
                     <div class="check">&#10003;</div>
                     <span>Recruiting blog post</span>
@@ -71,7 +71,7 @@
 
         <section>
             <div class="container">
-                <div class="title">&#11206; Upcoming</div>
+                <h1 class="title">&#11206; Upcoming</h1>
                 <div class="line">
                     <div class="check cross">&cross;</div>
                     <span>Schedule meeting with Alex</span>
